# connectors

./: .gitignore  BACH-REIMPORT-NOTE.md  CHANGELOG.md  LICENSE  README.md  README_de.md  README_es.md  README_ja.md  README_ru.md  README_zh-Hans.md  SECURITY.md  TODO.md  __init__.py  base.py  discord_connector.py  ellmos-module.v2.json  homeassistant_connector.py  llms.txt  pyproject.toml  requirements.txt  signal_connector.py  telegram_connector.py  webhook_connector.py  whatsapp_connector.py
.github/workflows/: tests.yml
templates/: __init__.py  connector_template.py  notification_template.yaml  setup_wizard.py  telegram_template.yaml  whatsapp_template.yaml
tests/: test_behavior.py  test_imports.py  test_repository_hygiene.py
