[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ellmos-connectors"
version = "1.1.0"
description = "Standalone messaging connectors for autonomous agents"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
  { name = "connectors contributors" }
]
keywords = [
  "agents",
  "messaging",
  "telegram",
  "discord",
  "signal",
  "whatsapp",
  "home-assistant",
  "webhook",
  "local-first"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Communications",
  "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = []

[project.optional-dependencies]
wizard = ["pyyaml>=6.0"]
test = ["pytest>=7.0", "pyyaml>=6.0"]

[project.urls]
Homepage = "https://github.com/ellmos-ai/connectors#readme"
Repository = "https://github.com/ellmos-ai/connectors"
Issues = "https://github.com/ellmos-ai/connectors/issues"

[tool.setuptools]
packages = ["connectors", "connectors.templates"]
include-package-data = true

[tool.setuptools.package-dir]
connectors = "."

[tool.setuptools.package-data]
connectors = ["templates/*.yaml"]
